[project]
name = "comfyui-3d-photo-inpainting"
description = "a comfyui custom node for [a/3d-photo-inpainting](https://github.com/vt-vl-lab/3d-photo-inpainting),then you can render one image to zoom-in/dolly zoom/swing motion/circle motion video"
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python", "vispy", "moviepy", "transforms3d", "networkx", "scikit-image", "matplotlib"]

[project.urls]
Repository = "https://github.com/AIFSH/ComfyUI-3d-photo-inpainting"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-3d-photo-inpainting"
Icon = ""
